sumo/tests/traci/Scenario/DomainVehicle/InvalidObjectID/testclient.prog
simstep 1 1
% flag: get, domain: vehicle, domain id:-1, variable: name, valType: 0 %
scenario_novalue 0 1 -1 13 0
simstep 2 1
